--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 Flask==2.3.2
 gunicorn==21.2.0
 numpy==1.24.4
-opencv-python-headless==4.8.0.74
-scikit-learn==1.2.2
-Pillow==9.5.0
+scikit-learn
+Pillow
 
